<resources>
    <string name="app_name">MyTelegram</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="create_groups">Создать группу</string>
    <string name="secret_chat">Создать секретный чат</string>
    <string name="create_channel">Создать канал</string>
    <string name="contacts">Контакты</string>
    <string name="phone">Звонки</string>
    <string name="favorites">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="invite">Пригласить друзей</string>
    <string name="help">Вопросы о Telegram</string>
    <string name="default_user_name">Вова Б</string>
    <string name="user_mail">+79225623475</string>
    <string name="chat">Чаты</string>
    <string name="status_default_user">в сети</string>
    <string name="Settings_account">Аккаунт</string>
    <string name="setting_user_phone">+7 (926) 347–71–80</string>
    <string name="setting_phone_hint">Нажмите, чтобы изменить номер телефона</string>
    <string name="setting_user_login">\@login</string>
    <string name="setting_login_hint">Имя пользователя</string>
    <string name="setting_user_about" />
    <string name="setting_user_about_hint">Напишите немного о себе</string>
    <string name="settings_TopMenu_change_name">Изменить имя</string>
    <string name="settings_menu_logout">Выход</string>
    <string name="settings_menu_photo">Выбрать фотографию или видео</string>
    <string name="register_enter_phone_number">--- --- ----</string>
    <string name="register_totle_your_phone">Ваш телефон</string>
    <string name="register_text_enter_cod">Введите код</string>
    <string name="register_text_enter_cod2">Мы отправили SMS с кодом проверки на ваш телефон</string>
    <string name="register_code_hint">------</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="register_text_enter_phone">Введите номер телефона</string>
    <string name="verifi_sucess_hello">Добро пожаловать!</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
</resources>