<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_baseline_more_vert_24"
        app:showAsAction="ifRoom"
        android:title="">
    <menu>
        <item android:id="@+id/settings_TopMenu_change_name"
            android:title="@string/settings_TopMenu_change_name"
            android:icon="@drawable/ic_btn_action_menu"
            app:showAsAction="never" />

        <item android:id="@+id/settings_menu_photo"
            android:title="@string/settings_menu_photo"
            android:icon="@drawable/ic_baseline_add_a_photo_24"
            app:showAsAction="never"/>

        <item android:id="@+id/settings_menu_logout"
            android:title="@string/settings_menu_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            app:showAsAction="never"/>


    </menu>
</item>
</menu>