<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mytelegram.ui.fragments.EnterCodeFragment">

    <ImageView
        android:id="@+id/image_code_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:src="@drawable/ic_code_sms_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_enter_code_1"
        android:text="@string/register_text_enter_cod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_code_register"
        style="@style/fragment_text"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_enter_code_2"
        android:text="@string/register_text_enter_cod2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_enter_code_1"
        style="@style/settings_button_hint"
        android:gravity="center"/>

    <EditText
        android:id="@+id/register_input_code"
        android:autofillHints=""
        android:hint="@string/register_code_hint"
        android:maxLength="6"
        app:layout_constraintTop_toBottomOf="@+id/text_enter_code_2"
        style="@style/fragment_text"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>